Fix GitHub Pages deployment - update to ihnk-dbg username
- Updated repository URL to ihnk-dbg/blog
- Updated meta tags with correct GitHub Pages URL
- Updated GiscusComments repo reference
- Fixed base path configuration for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="author" content="Ian" />
     
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ian-dbg.github.io/blog/" />
+    <meta property="og:url" content="https://ihnk-dbg.github.io/blog/" />
     <meta property="og:title" content="Ian's Digital Journal - Where logic meets meaning" />
     <meta property="og:description" content="A modern blog exploring code, philosophy, and creation. Built with React and Vite." />
     
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://ian-dbg.github.io/blog/" />
+    <meta property="twitter:url" content="https://ihnk-dbg.github.io/blog/" />
     <meta property="twitter:title" content="Ian's Digital Journal - Where logic meets meaning" />
     <meta property="twitter:description" content="A modern blog exploring code, philosophy, and creation. Built with React and Vite." />
     <meta property="twitter:creator" content="@c1tenn" />
